--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <input id="nota1" type="text" name="name" value=""><br><br>
       <button id="buttonMedia" type="button" name="button">MÉDIA</button>
     </div>
-
+	<script src="function.js"></script>
   </body>
 </html>
