--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>Média</title>
   </head>
   <body>
+    <div class="head">
+      <h1>CALCMÉDIA</h1>
+    </div>
+    <div class="container">
+      <input id="nota1" type="text" name="name" value=""><br>
+      <input id="nota1" type="text" name="name" value=""><br>
+      <input id="nota1" type="text" name="name" value=""><br>
+      <button id="buttonMedia" type="button" name="button"></button>
+    </div>
 
   </body>
 </html>
