--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
     <meta charset="utf-8">
     <title>Média</title>
   </head>
@@ -12,7 +13,7 @@
       <input id="nota1" type="text" name="name" value=""><br>
       <input id="nota1" type="text" name="name" value=""><br>
       <input id="nota1" type="text" name="name" value=""><br>
-      <button id="buttonMedia" type="button" name="button"></button>
+      <button id="buttonMedia" type="button" name="button">MÉDIA</button>
     </div>
 
   </body>
