--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <input id="nota1" type="text" name="name" value=""><br>
       <input id="nota1" type="text" name="name" value=""><br>
-      <input id="nota1" type="text" name="name" value=""><br>
+      <input id="nota1" type="text" name="name" value=""><br><br>
       <button id="buttonMedia" type="button" name="button">MÉDIA</button>
     </div>
 
